# internal/server/gin_helpers.go
@@ -340,8 +340,10 @@ func getConsumptionMetric(consumption *storage.Consumption, metric string) float
 	}
 }
 
-// parseTrendsDateRangeParams converts trend API params to date range values
-func parseTrendsDateRangeParams(start, end *time.Time, days *int) (time.Time, time.Time, int, error) {
+
+
+// parseTimeRangeParams converts API time range params to time values for export and similar operations
+func parseTimeRangeParams(start, end *time.Time, days *int) (time.Time, time.Time, int, error) {
 	var startTime, endTime time.Time
 	var numDays int
 
@@ -367,22 +369,6 @@ func parseTrendsDateRangeParams(start, end *time.Time, days *int) (time.Time, ti
 	}
 
 	return startTime, endTime, numDays, nil
-}
-
-// validateTrendsSubscriptionAccess checks if user has access based on subscription and date range
-func validateTrendsSubscriptionAccess(subscriptionTier string, start, end time.Time) error {
-	days := int(end.Sub(start).Hours()/24) + 1
-
-	if days > 7 && strings.ToLower(subscriptionTier) != storage.SubscriptionTierPro {
-		return fmt.Errorf("access to more than 7 days requires Pro subscription")
-	}
-
-	// Pro users can access up to 1 year of data
-	if days > 365 {
-		return fmt.Errorf("maximum date range is 365 days")
-	}
-
-	return nil
 }
 
 // normalizeConsumptionInput extracts and normalizes input from either JSON or multipart form
